# mp-deploy-proxmox

./: .envrc  .gitignore  Pulumi.dev.yaml  Pulumi.prod.yaml  Pulumi.yaml  README.md  __main__.py  ansible-requirements.yaml  ansible.cfg  ansible.dev.yaml  ansible.prod.yaml  pyproject.toml
.github/workflows/: quality-check.yaml
assets/backup/etc/pve/: jobs.cfg
assets/grub/: usb-powersave-off.cfg
assets/prometheus-exporter/etc/prometheus/: pve.yml
assets/prometheus/local/tmp/: prometheus.yml
assets/smtp/etc/pve/: notifications.cfg
inventory/common/group_vars/all/: bitwarden.yaml  connection.yaml  notification.yaml
inventory/dev/: hosts.yaml
inventory/prod/: hosts.yaml
playbooks/: main.yaml  proxmox-acme-pbs.yaml  proxmox-acme-pve.yaml  proxmox-acme.yaml  proxmox-api-token-pbs.yaml  proxmox-api-token-pve.yaml  proxmox-api-token.yaml  proxmox-backup.yaml  proxmox-grub-usb.yaml  proxmox-host-backup.yaml  proxmox-local-snippets.yaml  proxmox-node-exporter.yaml  proxmox-notifications.yaml  proxmox-post-install.yaml  proxmox-prometheus.yaml  proxmox-pve-exporter.yaml  pve-grub-usb.yaml
playbooks/tasks/: proxmox-api-token-pbs.yaml  proxmox-api-token-pve.yaml
playbooks/templates/: backup-jobs.cfg.j2  notifications-priv.cfg.j2  notifications.cfg.j2  prometheus-ct.yml.j2  prometheus-pve-exporter.service.j2  prometheus-pve-exporter.yml.j2
pve/: acme.py  api_token.py  backup.py  base.py  grub.py  prometheus.py  python.py  smtp.py  util.py
roles/pve_template/: README.md
roles/pve_template/tasks/: main.yaml
scripts/: get-ansible-vault-password.sh
(+27 files in other folders)
