[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
pulumi = ">=3.0.0,<4.0.0"
pulumi-command = "^0.11.1"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pyright = "^1.1.368"

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
