[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry]
package-mode = false

[tool.poetry.dependencies]
python = "^3.12"
ansible = "^11.1.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.1.8"
pyright = "^1.1.368"
ansible-lint = { version = "^24.12.2", markers = "platform_system != 'Windows'" }

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
