[project]
name = "deploy-proxmox"
version = "0.1.0"
description = "Deployment of a Proxmox cluster with Ansible."
requires-python = ">=3.12"
dependencies = ["ansible>=11.1.0"]

[dependency-groups]
dev = ["ansible-lint>=24.12.2", "pyright>=1.1.391", "ruff>=0.8.4"]

[tool.uv]
environments = ["platform_system != 'Windows'"]

[tool.ruff]
line-length = 100

[tool.ruff.format]
quote-style = "single"
